# transcription

./: .gitignore  pyproject.toml  transcribe_multiple_speakers.py  transcribe_single_speaker.py
